# Toys-Unboxed

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md
assets/: Tileset Spring.tsx  box-map.tmx  units.toml
crates/game/: Cargo.toml
crates/game/src/: animation.rs  battle.rs  camera.rs  components.rs  details_ui.rs  economy.rs  interaction.rs  lobby.rs  main.rs  map.rs  menu.rs  networking.rs  placement_visuals.rs  recruitment_ui.rs  troop_spawner.rs
crates/simulation-core/: Cargo.toml
crates/simulation-core/src/: combat.rs  formation.rs  game_state.rs  lib.rs  types.rs  unit_data.rs
spacetimedb/: Cargo.toml
spacetimedb/src/: lib.rs
src/: main.rs
