[package]
name = "game"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.18"
bevy_ecs_tiled = "0.11"
rand = "0.9"
simulation-core = { path = "../simulation-core" }
bevy_spacetimedb = { path = "/Users/maximilian.georg/RustroverProjects/tower-defense-with-friends/bevy_spacetimedb" }
spacetimedb-sdk = { git = "https://github.com/maxgeorg99/SpacetimeDB.git", branch = "rust-web-sdk-updated", default-features = false }
